# pokerAi

./: README.md  setup.cfg  test.py
src/poker/: bin.py  combinations.py  game.py
