[metadata]
name = pokerAi
version = 0.0.1
author = weiserhase
author_email = weiserhaseYtmap@gmail.com
description = Python-utils will provide base level components to all python projectsa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/weiserhase/pokerAi
project_urls =
    Bug Tracker = https://github.com/weiserhase/pokerAi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src